tests/samples/positive/types/const_string.ax
module const_string;

const TEXT: str = "hi";
const C_TEXT: *const u8 = c"hi";

fn main() -> i32 {
    let text: str = TEXT;
    let c_text: *const u8 = C_TEXT;
    if ptraddr(C_TEXT) == ((0) as usize) {
        return 1;
    }
    if ptraddr(c_text) == ((0) as usize) {
        return 2;
    }
    return 0;
}
