tests/samples/negative/types/strraw_pointer_block_alias_return_local.ax
module strraw_pointer_block_alias_return_local;

unsafe fn bad() -> str {
    let bytes: [2]u8 = b"ok";
    let data: *const u8 = {
        let view: []const u8 = bytes[:];
        sliceptr(view)
    };
    return strraw(data, 2usize);
}

fn main() -> i32 {
    return 0;
}
